Solved 04 in flex using flex direction as column and then added some divs for the plants and the container and aligned items

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,8 +10,28 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
+.container {
+  display: flex;
+  align-items: flex-start;
+  gap: 52px;
+  margin: 32px 50px;
+  justify-content: center;
+}
+
+.plant-item {
+  display: flex;
+  width: 200px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.text {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
